# accumulate-accumen

./: .gitignore  CLAUDE-ORCH.md  CLAUDE.md  README.md  go.mod  go.sum  go.work  go.work.sum
.claude/: settings.local.json
bridge/anchors/: dn_writer.go
bridge/l0api/: auth.go  builders.go  client.go  events.go  querier.go  submit.go
bridge/outputs/: limits.go  outbox.go  scope.go  stage.go  submit.go  verify.go
bridge/pricing/: credits.go  credits_manager.go  schedule.go
cmd/accucli/: main.go
cmd/accumen/: main.go
cmd/accumen-follower/: main.go
cmd/accumen-vdk/: main.go
cmd/accustress/: main.go
config/: example-with-profiles.yaml  local.yaml
config/networks/: devnet.yaml  mainnet.yaml  testnet.yaml
docker/: Dockerfile.accumen  docker-compose.devnet.yaml
docker/config/: docker.yaml
docs/: ARCHITECTURE.md  EXAMPLES.md  RUNBOOK.md
engine/: .gitignore
engine/gas/: meter.go
engine/host/: abi.go
engine/runtime/: audit.go  cache.go  fuzz_test.go  host_bindings.go  runtime.go
engine/state/: badger.go  kv.go  receipt.go  snapshot.go
follower/indexer/: indexer.go
internal/accutil/: header.go  url.go
ops/: Makefile  bootstrap.ps1  bootstrap.sh  devnet-init.ps1  devnet-init.sh  devnet-run.ps1  devnet-run.sh  run-accumen.ps1  run-sim.ps1
sdk/rust/accumen-abi/: Cargo.toml
sdk/rust/accumen-abi/src/: lib.rs
sdk/rust/examples/counter/: Cargo.toml
sdk/rust/examples/counter/src/: lib.rs
sequencer/: bench_test.go  config.go  exec.go  loop.go  mempool.go  mempool_persist.go
tools/: gen-json.ps1  gen-json.sh  gen-proto.ps1  gen-proto.sh
(+39 files in other folders)
