[package]
name = "accumen-abi"
version = "0.1.0"
edition = "2021"
description = "Rust ABI bindings for Accumen WASM runtime"
license = "MIT OR Apache-2.0"
authors = ["Accumulate Contributors"]
repository = "https://github.com/opendlt/accumulate-accumen"
keywords = ["accumulate", "wasm", "blockchain", "abi"]
categories = ["api-bindings", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
default = ["std"]
std = []
alloc = []

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]