[package]
name = "counter"
version = "0.1.0"
edition = "2021"
description = "Simple counter example using Accumen WASM runtime"

[lib]
crate-type = ["cdylib"]

[dependencies]
accumen-abi = { path = "../../accumen-abi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "s"